--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FLLDC Applications and Website</title>
+<title>FLLDC Tools</title>
+<link href="../assets/img/LOGO.png" rel="icon" style="border-radius:10%">
 <style>
     /* High-Tech Dark Mode Theme */
     body {
