--- a/public/index.html
+++ b/public/index.html
@@ -122,11 +122,11 @@
     <!-- Tools Section -->
     <div class="section-title">Tools</div>
     <div class="grid">
-        <a href="/system-login" class="card" target="_blank" title="Access FLLDC IMS">
+        <a href="https://flldc-ims.vercel.app/" class="card" target="_blank" title="Access FLLDC IMS">
             <img src="../assets/img/LOGO.png" alt="FLLDC IMS App">
             <p>FLLDC IMS</p>
         </a>
-        <a href="" class="card" target="_blank" title="Visit FLLDC Booking Website">
+        <a href="https://flldc-booking-app.vercel.app/" class="card" target="_blank" title="Visit FLLDC Booking Website">
             <img src="../assets/img/LOGO.png" alt="FLLDC Booking App">
             <p>FLLDC Booking Website</p>
         </a>
