--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         color: #333;
         margin: 0;
         padding: 0;
-        background-image: url('../assets/img/LOGO.png');
+        background-image: url('../assets/img/bg_picture.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
