--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,11 @@
         max-width: 1000px;
         margin: auto;
         text-align: center;
-        background: rgba(255, 255, 255, 0.9);
         padding: 30px;
         border-radius: 15px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        /* Make container transparent */
+        background: transparent;
+        box-shadow: none;
     }
     .logo img {
         width: 100px;
