--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     .card {
         width: 120px;
         height: 120px;
-        background: #f0f0f0;
+        background: rgba(255, 255, 255, 0.9); /* Slight opacity for readability */
         border: 2px solid #e0e0e0;
         border-radius: 10px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
