--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
         text-align: center;
         padding: 30px;
         border-radius: 15px;
-        /* Make container transparent */
-        background: transparent;
-        box-shadow: none;
+        /* Light gray with slight opacity */
+        background: rgba(200, 200, 200, 0.7);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
     .logo img {
         width: 100px;
