--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     /* Scrolling Footer */
     .footer {
         overflow: hidden;
-        background: #333;
+        background: #54b5e9;
         color: white;
         padding: 10px 0;
     }
