--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     /* Scrolling Footer */
     .footer {
         overflow: hidden;
-        background: #486de8;
+        background: #bcbec5;
         color: white;
         padding: 10px 0;
     }
