--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
     /* Scrolling Footer */
     .footer {
         overflow: hidden;
-        background: #ffffff;
+        /* background: #ffffff; */
+        background-color: transparent;
         color: white;
         padding: 10px 0;
     }
