--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,8 @@
     .footer {
         overflow: hidden;
         /* background: #ffffff; */
-        background-color: transparent;
+        background: rgba(200, 200, 200, 0.7);
+        /* background-color: transparent; */
         color: white;
         padding: 20px 0;
     }
