--- a/public/index.html
+++ b/public/index.html
@@ -95,11 +95,28 @@
             transform: translateX(-100%);
         }
     }
+    .section-title {
+        font-size: 2em;
+        color: #00e6e6;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin: 40px 0 20px;
+        position: relative;
+    }
+    .section-title::after {
+        content: "";
+        display: block;
+        width: 80px;
+        height: 2px;
+        background: #00e6e6;
+        margin: 8px auto 0;
+    }
 </style>
 </head>
 <body>
 
 <div class="container">
+    <div class="section-title">Tools</div>
     <div class="grid">
         <a href="https://flldc-ims.vercel.app/" class="card" target="_blank" title="Access FLLDC IMS">
             <img src="../assets/img/LOGO.png" alt="FLLDC IMS App">
