--- a/public/index.html
+++ b/public/index.html
@@ -96,20 +96,14 @@
         }
     }
     .section-title {
+        text-transform: uppercase;
+        font-weight: bold;
         font-size: 2em;
-        color: #00e6e6;
+        color: #090909;
         text-transform: uppercase;
         letter-spacing: 1px;
         margin: 40px 0 20px;
         position: relative;
-    }
-    .section-title::after {
-        content: "";
-        display: block;
-        width: 80px;
-        height: 2px;
-        background: #00e6e6;
-        margin: 8px auto 0;
     }
 </style>
 </head>
