--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,7 @@
         color: #090909;
         text-transform: uppercase;
         letter-spacing: 1px;
+        margin-bottom: 10px;
         position: relative;
     }
 </style>
