--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
     /* Animation for scrolling effect */
     @keyframes scroll {
         from {
-            transform: translateX(0);
+            transform: translateX(100%);
         }
         to {
             transform: translateX(-100%);
