--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         display: flex;
         justify-content: center;
         gap: 20px;
+        flex-wrap: wrap; /* Allow wrapping on smaller screens */
     }
     .card {
         width: 120px;
@@ -67,9 +68,7 @@
     /* Scrolling Footer */
     .footer {
         overflow: hidden;
-        /* background: #ffffff; */
         background: rgba(210, 210, 210, 0.7);
-        /* background-color: transparent; */
         color: white;
         padding: 20px 0;
     }
@@ -100,10 +99,48 @@
         font-weight: bold;
         font-size: 2em;
         color: #090909;
-        text-transform: uppercase;
         letter-spacing: 1px;
         margin-bottom: 10px;
         position: relative;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+        .container {
+            padding: 20px;
+        }
+        .section-title {
+            font-size: 1.5em;
+        }
+        .grid {
+            flex-direction: column;
+            align-items: center;
+        }
+        .card {
+            width: 100px;
+            height: 100px;
+            margin: 10px 0;
+        }
+    }
+
+    @media (max-width: 480px) {
+        .section-title {
+            font-size: 1.2em;
+        }
+        .grid {
+            flex-direction: column;
+            gap: 15px;
+        }
+        .card {
+            width: 80px;
+            height: 80px;
+        }
+        .marquee {
+            gap: 50px;
+        }
+        .marquee img {
+            height: 40px;
+        }
     }
 </style>
 </head>
